# ProjectTemplate

./: build.bat
01-HelloWorld/src/: main.cpp
02-Create&Link-StaticLibrary/: .gitignore  build.bat
02-Create&Link-StaticLibrary/Project/: build-Project.bat
02-Create&Link-StaticLibrary/Project/src/: StaticLib.h  main.cpp
02-Create&Link-StaticLibrary/StaticLibrary/: build-StaticLib.bat
02-Create&Link-StaticLibrary/StaticLibrary/src/: StaticLib.cpp
03-Create&Link-DynamicLibrary/: .gitignore  build.bat
03-Create&Link-DynamicLibrary/DynamicLibrary/: build-DynamicLib.bat
03-Create&Link-DynamicLibrary/DynamicLibrary/src/: DynamicLib.cpp  DynamicLib.h
03-Create&Link-DynamicLibrary/Project/: build-Project.bat
03-Create&Link-DynamicLibrary/Project/src/: DynamicLib.h  main.cpp
04-MeasureCodePerformence/: build.bat
04-MeasureCodePerformence/src/: main.cpp
05-ExternalFile/src/: main.cpp
06-OpenGL-Engine/: 06-OpenGL-Engine.code-workspace  Description.txt  build.bat
06-OpenGL-Engine/assets/shaders/: Default.frag  Default.vert
06-OpenGL-Engine/libs/: glfw3.lib
06-OpenGL-Engine/src/: Game.cpp  Game.h  Settings.h
06-OpenGL-Engine/src/Assets/: AssetLoader.cpp  AssetLoader.h  AssetsID.h
06-OpenGL-Engine/src/Entities/: BaseEntity.h  Entitiy.h  Entity.cpp
06-OpenGL-Engine/src/Graphics/: GraphicsTypes.h  OGl.cpp  OGl.h
06-OpenGL-Engine/src/OPPEngine/: OOPEngine.cpp  OOPEngine.h
07-HelloWorld_CMake_Msys2/: CMakeLists.txt  Readme.md
07-HelloWorld_CMake_Msys2/src/: main.cpp
src/: main.cpp
